# project-2_kravchenko_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
data/: person.json  users.json
src/: decorators.py
src/primitive_db/: core.py  engine.py  utils.py
