[tool.poetry]
name = "project-2_kravchenko_m25-555"
version = "0.1.0"
description = ""
authors = ["SHMANTA <nik.kravchenko.2004@bk.ru>"]
packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 