[tool.poetry]
name = "project-2_kravchenko_m25-555"
version = "0.1.0"
description = "Simple python data base implementation"
authors = ["SHMANTA <nik.kravchenko.2004@bk.ru>"]
packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
ruff = "^0.14.7"
prettytable = "^3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []